# VulkanMine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
old_src/: App.cpp  App.h  KeyboardMovementController.cpp  KeyboardMovementController.hpp  Window.cpp  Window.h  main.cpp
old_src/Graphics/: GfxBuffer.cpp  GfxDevice.cpp  GfxDevice.hpp  GfxModel.hpp  GfxPipeline.cpp  TextureHandlerVk.hpp
old_src/Input/: Mouse.cpp
old_src/World/: Chunk.cpp  Chunk.hpp
res/blocks/: air.json  bedrock.json  coal_ore.json  cobblestone.json  debug.json  diamond_ore.json  dirt.json  glowstone.json  gold_ore.json  grass.json  gravel.json  iron_ore.json  leaves.json  obsidian.json  redstone_ore.json  sand.json  stone.json  water.json
shaders/: chunk_shader.frag  chunk_shader.vert  compile.sh  grid.frag  grid.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  skybox.frag  skybox.vert  test_shader.frag  test_shader.vert
src/: App.cpp  App.h  Camera.cpp  Camera.hpp  GameObject.hpp  Keyboard.cpp  Keyboard.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  Window.cpp  Window.h  main.cpp
src/Graphics/: FrameInfo.hpp  GfxBuffer.cpp  GfxBuffer.hpp  GfxDescriptors.cpp  GfxDescriptors.hpp  GfxDevice.cpp  GfxDevice.hpp  GfxModel.cpp  GfxModel.hpp  GfxPipeline.cpp  GfxPipeline.h  GfxSwapChain.cpp  GfxSwapChain.hpp  Renderer.cpp  Renderer.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp  TextureHandlerVk.cpp
src/Input/: Keyboard.cpp  Keyboard.hpp  Mouse.hpp
src/RenderSystems/: ChunkRenderSystem.cpp  ChunkRenderSystem.hpp
src/World/: World.hpp
src/assets/: AssetsLoader.cpp  AssetsLoader.hpp  BlockLoader.cpp  BlockLoader.hpp  Image.cpp  Image.hpp  Utils.hpp
src/core/: App.cpp  App.hpp  Camera.hpp  Frustum.hpp  LogMacros.hpp  Logger.cpp  Logger.hpp  MemoryTracker.cpp  NonCopyable.hpp  Scene.cpp  Scene.hpp  Timer.hpp  Window.cpp  Window.hpp
src/input/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/renderSystems/: ChunkRenderSystem.cpp  ChunkRenderSystem.hpp  ChunkVertex.hpp  GridRenderSystem.cpp  GridRenderSystem.hpp  SkyboxRenderSystem.cpp  SkyboxRenderSystem.hpp
src/renderer/: Mesh.hpp
src/renderer/backend/: BufferVk.cpp  BufferVk.hpp  DescriptorsVk.cpp  DescriptorsVk.hpp  PipelineVk.cpp  PipelineVk.hpp  RenderDeviceVk.cpp  RenderDeviceVk.hpp  Renderer.cpp  Renderer.hpp  ShaderModuleVk.cpp  ShaderModuleVk.hpp  SwapChainVk.cpp  SwapChainVk.hpp  TextureVk.cpp  TextureVk.hpp  _SwapChainVk.cpp  _SwapChainVk.hpp
src/scenes/: TestScene.cpp  TestScene.hpp
src/utils/: NonCopyable.hpp  hash.hpp
src/world/: Block.cpp  Block.hpp  BlockId.hpp  BlocksManager.cpp  BlocksManager.hpp  Chunk.cpp  Chunk.hpp  ChunksManager.cpp  ChunksManager.hpp  PlayerController.cpp  PlayerController.hpp  TextureAtlas.cpp  TextureAtlas.hpp  Voxel.hpp  WorldGenerator.cpp  WorldGenerator.hpp
